--- a/project-01-monster-slayer-game/index.html
+++ b/project-01-monster-slayer-game/index.html
@@ -20,24 +20,48 @@
       <section id="monster" class="container">
         <h2>Monster Health</h2>
         <div class="healthbar">
-          <div class="healthbar__value"></div>
+          <div
+            class="healthbar__value"
+            :style="monsterHealthStyles"
+          ></div>
         </div>
       </section>
       <section id="player" class="container">
         <h2>Your Health</h2>
         <div class="healthbar">
-          <div class="healthbar__value"></div>
+          <div
+            class="healthbar__value"
+            :style="playerHealthStyles"
+          ></div>
         </div>
       </section>
-      <section id="controls">
-        <button>ATTACK</button>
-        <button>SPECIAL ATTACK</button>
-        <button>HEAL</button>
-        <button>SURRENDER</button>
+      <section class="container" v-if="winner">
+        <h2>Game Over:</h2>
+        <h3 v-if="winner === 'Monster'">You lost!</h3>
+        <h3 v-else-if="winner === 'Player'">You win!</h3>
+        <h3 v-else-if="winner === 'Draw'">It's a draw!</h3>
+        <button @click="newGame">Start New Game</button>
+      </section>
+      <section id="controls" v-else>
+        <button @click="attackMonster">ATTACK</button>
+        <button
+          :disabled="useSpecialAttack"
+          @click="specialAttackMonter"
+        >SPECIAL ATTACK</button>
+        <button @click="healPlayer">HEAL</button>
+        <button @click="surrender">SURRENDER</button>
       </section>
       <section id="log" class="container">
         <h2>Battle Log</h2>
-        <ul></ul>
+        <ul>
+          <li v-for="message in messagesLog">
+            <span
+              :class="{'log--player': message.actionBy === 'player', 'log--monster': message.actionBy === 'monster'}"
+            >{{ message.actionBy === 'player' ? 'Player' : 'Monster' }}</span>
+            <span v-if="message.actionType === 'heals'"> heals himself for <span class="log--heal">{{ message.actionValue }}</span></span>
+            <span v-else> attacks and deals <span class="log--damage">{{ message.actionValue }}</span></span>
+          </li>
+        </ul>
       </section>
     </div>
   </body>
