--- a/behind-the-scenes/index.html
+++ b/behind-the-scenes/index.html
@@ -16,11 +16,20 @@
     <header>
       <h1>Vue Behind The Scenes</h1>
     </header>
+    <!-- 1ый экземпляр Vue -->
     <section id="app">
       <h2>How Vue Works</h2>
       <input type="text" @input="saveInput">
       <button @click="setText">Set Text</button>
       <p>{{ message }}</p>
+    </section>
+    <!-- 2ой экземпляр Vue -->
+    <section id="app2">
+      <h2>Second App</h2>
+      <!-- Свойство message нельзя вывести из другого
+      экземпляра Vue -->
+      <p>{{ message }}</p>
+      <p>{{ favoriteFruit }}</p>
     </section>
   </body>
 </html>
