--- a/behind-the-scenes/index.html
+++ b/behind-the-scenes/index.html
@@ -25,11 +25,8 @@
     </section>
     <!-- 2ой экземпляр Vue -->
     <section id="app2">
-      <h2>Second App</h2>
-      <!-- Свойство message нельзя вывести из другого
-      экземпляра Vue -->
-      <p>{{ message }}</p>
-      <p>{{ favoriteFruit }}</p>
+      <!-- Свойство message нельзя вывести из другого экземпляра Vue -->
+      <!-- <p>{{ message }}</p> -->
     </section>
   </body>
 </html>
