--- a/behind-the-scenes/index.html
+++ b/behind-the-scenes/index.html
@@ -19,7 +19,7 @@
     <!-- 1ый экземпляр Vue -->
     <section id="app">
       <h2>How Vue Works</h2>
-      <input type="text" @input="saveInput">
+      <input type="text" ref="userText">
       <button @click="setText">Set Text</button>
       <p>{{ message }}</p>
     </section>
