--- a/components-intro/index.html
+++ b/components-intro/index.html
@@ -18,14 +18,10 @@
     </header>
     <section id="app">
       <ul>
-        <li v-for="friend in friends" :key="friend.id">
-          <h2>{{ friend.name}}</h2>
-          <button @click="toggleDetails">{{ detailsIsVisible ? 'Hide' : 'Show'}} Details</button>
-          <ul v-if="detailsIsVisible">
-            <li><strong>Phone:</strong> {{ friend.phone}}</li>
-            <li><strong>Email:</strong> {{ friend.email}}</li>
-          </ul>
-        </li>
+        <!-- Добавляем компонент friend-contact -->
+        <friend-contact></friend-contact>
+        <!-- Переиспользование компонента -->
+        <friend-contact></friend-contact>
       </ul>
     </section>
   </body>
